// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getSwcInputConfig() > can mutate config 1`] = `
{
  "caller": {
    "name": "packemon",
  },
  "configFile": false,
  "cwd": "INPUT",
  "jsc": {
    "externalHelpers": false,
    "keepClassNames": true,
    "loose": false,
    "parser": {
      "dynamicImport": true,
      "jsx": false,
      "syntax": "ecmascript",
    },
    "preserveAllComments": true,
    "target": "es2022",
    "transform": {
      "optimizer": undefined,
    },
  },
  "module": {
    "ignoreDynamic": true,
    "type": "es6",
  },
  "rootMode": "upward",
  "swcrc": false,
}
`;

exports[`getSwcInputConfig() > doesnt include typescript decorators if \`typescript\` feature flag is false 1`] = `
{
  "caller": {
    "name": "packemon",
  },
  "configFile": false,
  "jsc": {
    "externalHelpers": false,
    "keepClassNames": true,
    "loose": false,
    "parser": {
      "dynamicImport": true,
      "jsx": false,
      "syntax": "ecmascript",
    },
    "preserveAllComments": true,
    "target": "es2022",
    "transform": {
      "optimizer": undefined,
    },
  },
  "module": {
    "ignoreDynamic": true,
    "type": "es6",
  },
  "swcrc": false,
}
`;

exports[`getSwcInputConfig() > includes no parser/transformer options by default 1`] = `
{
  "caller": {
    "name": "packemon",
  },
  "configFile": false,
  "jsc": {
    "externalHelpers": false,
    "keepClassNames": true,
    "loose": false,
    "parser": {
      "dynamicImport": true,
      "jsx": false,
      "syntax": "ecmascript",
    },
    "preserveAllComments": true,
    "target": "es2022",
    "transform": {
      "optimizer": undefined,
    },
  },
  "module": {
    "ignoreDynamic": true,
    "type": "es6",
  },
  "swcrc": false,
}
`;

exports[`getSwcInputConfig() > includes react transformer if \`react\` feature flag is true 1`] = `
{
  "optimizer": undefined,
  "react": {
    "runtime": "automatic",
    "throwIfNamespace": true,
  },
}
`;

exports[`getSwcInputConfig() > includes typescript decorators if \`typescript\` and \`decorators\` feature flag is true 1`] = `
{
  "caller": {
    "name": "packemon",
  },
  "configFile": false,
  "jsc": {
    "externalHelpers": false,
    "keepClassNames": true,
    "loose": false,
    "parser": {
      "decorators": true,
      "dynamicImport": true,
      "syntax": "typescript",
      "tsx": false,
    },
    "preserveAllComments": true,
    "target": "es2022",
    "transform": {
      "legacyDecorator": true,
      "optimizer": undefined,
    },
  },
  "module": {
    "ignoreDynamic": true,
    "type": "es6",
  },
  "swcrc": false,
}
`;

exports[`getSwcInputConfig() > includes typescript parser if \`typescript\` feature flag is true 1`] = `
{
  "dynamicImport": true,
  "syntax": "typescript",
  "tsx": false,
}
`;

exports[`getSwcInputConfig() > supports private properties with decorators if dep exists 1`] = `
{
  "caller": {
    "name": "packemon",
  },
  "configFile": false,
  "jsc": {
    "externalHelpers": false,
    "keepClassNames": true,
    "loose": false,
    "parser": {
      "decorators": true,
      "dynamicImport": true,
      "syntax": "typescript",
      "tsx": false,
    },
    "preserveAllComments": true,
    "target": "es2022",
    "transform": {
      "legacyDecorator": true,
      "optimizer": undefined,
    },
  },
  "module": {
    "ignoreDynamic": true,
    "type": "es6",
  },
  "swcrc": false,
}
`;

exports[`getSwcOutputConfig() > can mutate config 1`] = `
{
  "caller": {
    "name": "packemon",
  },
  "configFile": false,
  "cwd": "OUTPUT",
  "env": {
    "bugfixes": true,
    "loose": false,
    "mode": undefined,
    "shippedProposals": true,
    "targets": "defaults, not IE 11",
  },
  "jsc": {
    "keepClassNames": true,
    "parser": {
      "syntax": "ecmascript",
    },
    "preserveAllComments": true,
    "transform": {
      "optimizer": {
        "globals": {
          "vars": {
            "__DEV__": "process.env.NODE_ENV !== 'production'",
            "__PROD__": "process.env.NODE_ENV === 'production'",
            "__TEST__": "process.env.NODE_ENV === 'test'",
          },
        },
      },
    },
  },
  "module": {
    "ignoreDynamic": true,
    "type": "commonjs",
  },
  "rootMode": "upward",
  "swcrc": false,
}
`;

exports[`getSwcOutputConfig() > handles preset-env: browser + esm + current 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": ">=1%, not dead",
}
`;

exports[`getSwcOutputConfig() > handles preset-env: browser + esm + experimental 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": "last 2 chrome versions, last 2 firefox versions",
}
`;

exports[`getSwcOutputConfig() > handles preset-env: browser + esm + legacy 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": ">=0.10%, not IE 11",
}
`;

exports[`getSwcOutputConfig() > handles preset-env: browser + esm + stable 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": "defaults, not IE 11",
}
`;

exports[`getSwcOutputConfig() > handles preset-env: browser + lib + current 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": ">=1%, not dead",
}
`;

exports[`getSwcOutputConfig() > handles preset-env: browser + lib + experimental 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": "last 2 chrome versions, last 2 firefox versions",
}
`;

exports[`getSwcOutputConfig() > handles preset-env: browser + lib + legacy 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": ">=0.10%, not IE 11",
}
`;

exports[`getSwcOutputConfig() > handles preset-env: browser + lib + stable 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": "defaults, not IE 11",
}
`;

exports[`getSwcOutputConfig() > handles preset-env: browser + umd + current 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": ">=1%, not dead",
}
`;

exports[`getSwcOutputConfig() > handles preset-env: browser + umd + experimental 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": "last 2 chrome versions, last 2 firefox versions",
}
`;

exports[`getSwcOutputConfig() > handles preset-env: browser + umd + legacy 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": ">=0.10%, not IE 11",
}
`;

exports[`getSwcOutputConfig() > handles preset-env: browser + umd + stable 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": "defaults, not IE 11",
}
`;

exports[`getSwcOutputConfig() > handles preset-env: native + lib + current 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": "iOS 15",
}
`;

exports[`getSwcOutputConfig() > handles preset-env: native + lib + experimental 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": "iOS 16",
}
`;

exports[`getSwcOutputConfig() > handles preset-env: native + lib + legacy 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": "iOS 13",
}
`;

exports[`getSwcOutputConfig() > handles preset-env: native + lib + stable 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": "iOS 14",
}
`;

exports[`getSwcOutputConfig() > handles preset-env: node + cjs + current 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": {
    "node": "18.12.0",
  },
}
`;

exports[`getSwcOutputConfig() > handles preset-env: node + cjs + experimental 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": {
    "node": "19.0.0",
  },
}
`;

exports[`getSwcOutputConfig() > handles preset-env: node + cjs + legacy 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": {
    "node": "14.15.0",
  },
}
`;

exports[`getSwcOutputConfig() > handles preset-env: node + cjs + stable 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": {
    "node": "16.12.0",
  },
}
`;

exports[`getSwcOutputConfig() > handles preset-env: node + lib + current 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": {
    "node": "18.12.0",
  },
}
`;

exports[`getSwcOutputConfig() > handles preset-env: node + lib + experimental 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": {
    "node": "19.0.0",
  },
}
`;

exports[`getSwcOutputConfig() > handles preset-env: node + lib + legacy 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": {
    "node": "14.15.0",
  },
}
`;

exports[`getSwcOutputConfig() > handles preset-env: node + lib + stable 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": {
    "node": "16.12.0",
  },
}
`;

exports[`getSwcOutputConfig() > handles preset-env: node + mjs + current 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": {
    "node": "18.12.0",
  },
}
`;

exports[`getSwcOutputConfig() > handles preset-env: node + mjs + experimental 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": {
    "node": "19.0.0",
  },
}
`;

exports[`getSwcOutputConfig() > handles preset-env: node + mjs + legacy 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": {
    "node": "14.15.0",
  },
}
`;

exports[`getSwcOutputConfig() > handles preset-env: node + mjs + stable 1`] = `
{
  "bugfixes": true,
  "loose": false,
  "mode": undefined,
  "shippedProposals": true,
  "targets": {
    "node": "16.12.0",
  },
}
`;

exports[`getSwcOutputConfig() > transforms async/await to promises when \`browser\` or \`native\` 1`] = `
{
  "caller": {
    "name": "packemon",
  },
  "configFile": false,
  "env": {
    "bugfixes": true,
    "loose": false,
    "mode": undefined,
    "shippedProposals": true,
    "targets": "defaults, not IE 11",
  },
  "jsc": {
    "keepClassNames": true,
    "parser": {
      "syntax": "ecmascript",
    },
    "preserveAllComments": true,
    "transform": {
      "optimizer": {
        "globals": {
          "vars": {
            "__DEV__": "process.env.NODE_ENV !== 'production'",
            "__PROD__": "process.env.NODE_ENV === 'production'",
            "__TEST__": "process.env.NODE_ENV === 'test'",
          },
        },
      },
    },
  },
  "module": {
    "ignoreDynamic": true,
    "type": "commonjs",
  },
  "swcrc": false,
}
`;

exports[`getSwcOutputConfig() > transforms async/await to promises when \`browser\` or \`native\` 2`] = `
{
  "caller": {
    "name": "packemon",
  },
  "configFile": false,
  "env": {
    "bugfixes": true,
    "loose": false,
    "mode": undefined,
    "shippedProposals": true,
    "targets": "iOS 16",
  },
  "jsc": {
    "keepClassNames": true,
    "parser": {
      "syntax": "ecmascript",
    },
    "preserveAllComments": true,
    "transform": {
      "optimizer": {
        "globals": {
          "vars": {
            "__DEV__": "process.env.NODE_ENV !== 'production'",
            "__PROD__": "process.env.NODE_ENV === 'production'",
            "__TEST__": "process.env.NODE_ENV === 'test'",
          },
        },
      },
    },
  },
  "module": {
    "ignoreDynamic": true,
    "type": "commonjs",
  },
  "swcrc": false,
}
`;

exports[`getSwcOutputConfig() > uses built-in destructuring and object spread when \`current\` or \`experimental\` 1`] = `
{
  "caller": {
    "name": "packemon",
  },
  "configFile": false,
  "env": {
    "bugfixes": true,
    "loose": false,
    "mode": undefined,
    "shippedProposals": true,
    "targets": {
      "node": "18.12.0",
    },
  },
  "jsc": {
    "keepClassNames": true,
    "parser": {
      "syntax": "ecmascript",
    },
    "preserveAllComments": true,
    "transform": {
      "optimizer": {
        "globals": {
          "vars": {
            "__DEV__": "process.env.NODE_ENV !== 'production'",
            "__PROD__": "process.env.NODE_ENV === 'production'",
            "__TEST__": "process.env.NODE_ENV === 'test'",
          },
        },
      },
    },
  },
  "module": {
    "ignoreDynamic": true,
    "type": "commonjs",
  },
  "swcrc": false,
}
`;

exports[`getSwcOutputConfig() > uses built-in destructuring and object spread when \`current\` or \`experimental\` 2`] = `
{
  "caller": {
    "name": "packemon",
  },
  "configFile": false,
  "env": {
    "bugfixes": true,
    "loose": false,
    "mode": undefined,
    "shippedProposals": true,
    "targets": {
      "node": "19.0.0",
    },
  },
  "jsc": {
    "keepClassNames": true,
    "parser": {
      "syntax": "ecmascript",
    },
    "preserveAllComments": true,
    "transform": {
      "optimizer": {
        "globals": {
          "vars": {
            "__DEV__": "process.env.NODE_ENV !== 'production'",
            "__PROD__": "process.env.NODE_ENV === 'production'",
            "__TEST__": "process.env.NODE_ENV === 'test'",
          },
        },
      },
    },
  },
  "module": {
    "ignoreDynamic": true,
    "type": "commonjs",
  },
  "swcrc": false,
}
`;
